# chile-house-pricing

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.claude/: settings.local.json
api/: README.md
api/app/: main.py
api/app/schemas/: property.py
data-pipeline/database/: db_manager.py
data-pipeline/jobs/: __init__.py  scrape_job.py
data-pipeline/scrapers/: __init__.py  models.py  portal_inmobiliario.py  rate_limiter.py
docs/: MIGRATION_GUIDE.md  RESTRUCTURING_SUMMARY.md  data-pipeline-guide.md  scraper-usage.md  web-scraping-study-guide.md
infrastructure/docker/: Dockerfile.api  Dockerfile.scraper  docker-compose.yml
infrastructure/scripts/: run_scraper.sh  setup.sh
ml/data/: README.md
ml/notebooks/: README.md
ml/src/: __init__.py
openspec/: project.md
