[project]
name = "chile-house-pricing"
version = "0.1.0"
description = "MLOps project for predicting house prices in Santiago, Chile"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Data Pipeline
    "playwright>=1.54.0",

    # API
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",

    # ML Core (add when you start ML phase)
    # "pandas>=2.1.0",
    # "numpy>=1.24.0",
    # "scikit-learn>=1.3.0",
    # "xgboost>=2.0.0",
    # "lightgbm>=4.1.0",

    # ML Tracking & Experiment (add when you start ML phase)
    # "mlflow>=2.8.0",
    # "optuna>=3.4.0",

    # Data Visualization (add when you start EDA)
    # "matplotlib>=3.8.0",
    # "seaborn>=0.13.0",
    # "plotly>=5.17.0",

    # Jupyter (add when you start notebooks)
    # "jupyter>=1.0.0",
    # "ipykernel>=6.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.10.0",
    "ruff>=0.1.0",
]

ml = [
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.1.0",
    "mlflow>=2.8.0",
    "optuna>=3.4.0",
]

viz = [
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.17.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
